--- a/src/main/webapp/view/profissional.html
+++ b/src/main/webapp/view/profissional.html
@@ -21,7 +21,8 @@
                             <tr>
                                 <th>Nome</th>
                                 <th>Apelido</th>
-                                <th>Cargo</th>
+                                <th>Telefone fixo</th>
+                                <th>Telefone celular</th>
                                 <th></th>
                             </tr>
                         </thead>
@@ -29,7 +30,8 @@
                             <tr ng-repeat="profissional in profissionais">
                                 <td>{{profissional.nome}}</td>
                                 <td>{{profissional.apelido}}</td>
-                                <td>{{profissional.cargo}}</td>
+                                <td>{{profissional.telefone}}</td>
+                                <td>{{profissional.celular}}</td>
                                 <td>
                                     <a data-toggle="modal" ng-click="editar(profissional)" ><i class="fa fa-fw fa-edit"></i></a>
                                     <a data-toggle="modal" ng-click="confirmExcluir(profissional)"><i class="fa fa-fw fa-trash"></i></a>
@@ -79,7 +81,7 @@
                         <li><a href="#horarios" data-toggle="tab" ng-hide="!profissional.id">Horários</a></li>
                     </ul>
                     <div class="tab-content">
-
+                        <!-- DADOS -->
                         <div class="active tab-pane" id="dados">
                             <div class="row">
                                 <div class="col-md-12">
@@ -122,39 +124,13 @@
                                         <div class="form-group" ng-class="{'has-error': (dadosProfissionalForm.telefone.$invalid && dadosProfissionalForm.telefone.$dirty)}">
                                             <label for="input-tel-fixo" class="col-sm-2 control-label" >Telefone fixo</label>
                                             <div class="col-sm-9">
-                                                <input type="text" class="form-control" id="input-tel-fixo" name="telefone" placeholder="Telefone fixo do salão" ng-model="profissional.telefone" mask='(99) 9?9999-9999' mask-restrict='reject' mask-clean='true' ng-required="true">
-                                                <div ng-messages="dadosProfissionalForm.telefone.$error" ng-show="dadosProfissionalForm.telefone.$dirty">
-                                                    <div ng-message="required" class="help-block">
-                                                        Por favor, preencher o campo telefone fixo
-                                                    </div>
-                                                    <div ng-message="mask" class="help-block">
-                                                        Telefone inválido
-                                                    </div>
-                                                </div>
+                                                <input type="text" class="form-control" id="input-tel-fixo" name="telefone" placeholder="Telefone fixo" ng-model="profissional.telefone" mask='(99) 9?9999-9999' mask-restrict='reject' mask-clean='true'>
                                             </div>
                                         </div>
                                         <div class="form-group" ng-class="{'has-error': (dadosProfissionalForm.celular.$invalid && dadosProfissionalForm.celular.$dirty)}">
                                             <label for="input-tel-celular" class="col-sm-2 control-label">Telefone celular</label>
                                             <div class="col-sm-9">
-                                                <input type="tel" class="form-control" id="input-tel-celular" name="celular" placeholder="Telefone celular do salão" ng-model="profissional.celular" mask='(99) 9?9999-9999' mask-restrict='reject' mask-clean='true' ng-required="true">
-                                                <div ng-messages="dadosProfissionalForm.celular.$error" ng-show="dadosProfissionalForm.celular.$dirty">
-                                                    <div ng-message="required" class="help-block">
-                                                        Por favor, preencher o campo telefone fixo
-                                                    </div>
-                                                    <div ng-message="mask" class="help-block">
-                                                        Telefone inválido
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <label class="col-sm-2 control-label">Cargo</label>
-                                            <div class="col-sm-9">
-                                                <select class="form-control">
-                                                    <option>Cabelereiro</option>
-                                                    <option>Manicure</option>
-                                                    <option>Depiladora</option>
-                                                </select>
+                                                <input type="text" class="form-control" id="input-tel-celular" name="celular" placeholder="Telefone celular" ng-model="profissional.celular" mask='(99) 9?9999-9999' mask-restrict='reject' mask-clean='true'>
                                             </div>
                                         </div>
 
@@ -170,8 +146,10 @@
                             </div>
 
                         </div>
+
+                        <!-- SERVIÇOS PRESTADOS -->
                         <div class="tab-pane" id="servicos">
-                            <div class="input-group col-sm-12">
+                            <div class="input-group col-sm-12" ng-show="profissional.servicosDisponiveis.length > 0">
                                 <select class="form-control" ng-model="servico.selecionado" ng-options="servico.id as servico.descricao for servico in profissional.servicosDisponiveis">
                                     <option value="">Selecione um Serviço</option>
                                 </select>
@@ -180,7 +158,7 @@
                                 </span>
                             </div>
                             <br />
-                            <table class="table table-condensed">
+                            <table class="table table-condensed" ng-show="profissional.servicosPrestados.length > 0">
                                 <tr>
                                     <th>Serviço</th>
                                     <th>Duração</th>
@@ -200,37 +178,73 @@
 
                         </div>
 
+                        <!-- HORARIO DE TRABALHO -->
                         <div class="tab-pane" id="horarios">
-                            <table class="table table-condensed">
+                            <form class="form-inline" name="horarioTrabalhoForm" ng-show="diasDaSemana.length > 0">
+                                <div class="form-group"  ng-class="{'has-error': (horarioTrabalhoForm.dia.$invalid && horarioTrabalhoForm.dia.$dirty)}">
+                                    <select class="form-control" name="dia" ng-model="horarioTrabalho.dia" ng-options="dia.id as dia.label for dia in diasDaSemana" ng-required="true">
+                                        <option value="">Selecione um dia da semana</option>
+                                    </select>
+                                </div>
+                                <div class="form-group" ng-class="{'has-error': (horarioTrabalhoForm.entrada1.$invalid && horarioTrabalhoForm.entrada1.$dirty)}">
+                                    <input type="text" class="form-control" name="entrada1" time-input ng-model="horarioTrabalho.entrada1" ng-required="true" >
+                                </div>
+                                <div class="form-group" ng-class="{'has-error': (horarioTrabalhoForm.saida1.$invalid && horarioTrabalhoForm.saida1.$dirty)}">
+                                    <input type="text" class="form-control" name="saida1" time-input ng-model="horarioTrabalho.saida1" ng-required="true">
+                                </div>
+                                <div class="form-group" ng-class="{'has-error': (horarioTrabalhoForm.entrada2.$invalid && horarioTrabalhoForm.entrada2.$dirty)}">
+                                    <input type="text" class="form-control" name="entrada2" time-input ng-model="horarioTrabalho.entrada2" ng-required="true">
+                                </div>
+                                <div class="form-group" ng-class="{'has-error': (horarioTrabalhoForm.saida2.$invalid && horarioTrabalhoForm.saida2.$dirty)}">
+                                    <input type="text" class="form-control" name="saida2" time-input ng-model="horarioTrabalho.saida2" ng-required="true">
+                                </div>
+                                <button class="btn btn-primary" type="button" ng-click="adicionarHorario(profissional.id, horarioTrabalho)" ng-disabled="horarioTrabalhoForm.$invalid" >Adicionar Horário</button>
+
+                                <div ng-messages="horarioTrabalhoForm.dia.$error" ng-show="horarioTrabalhoForm.dia.$dirty" ng-class="{'has-error': (horarioTrabalhoForm.dia.$invalid && horarioTrabalhoForm.dia.$dirty)}">
+                                    <div ng-message="required" class="help-block">
+                                        Por favor, selecione o dia da semana
+                                    </div>
+                                </div>
+
+                                <div ng-messages="horarioTrabalhoForm.entrada1.$error" ng-show="horarioTrabalhoForm.entrada1.$dirty" ng-class="{'has-error': (horarioTrabalhoForm.entrada1.$invalid && horarioTrabalhoForm.entrada1.$dirty)}">
+                                    <div ng-message="parse" class="help-block">
+                                        Por favor, informe um horario de entrada válido
+                                    </div>
+                                </div>
+                                <div ng-messages="horarioTrabalhoForm.saida1.$error" ng-show="horarioTrabalhoForm.saida1.$dirty" ng-class="{'has-error': (horarioTrabalhoForm.saida1.$invalid && horarioTrabalhoForm.saida1.$dirty)}">
+                                    <div ng-message="parse" class="help-block">
+                                        Por favor, informe um horario de saida válido
+                                    </div>
+                                </div>
+                                <div ng-messages="horarioTrabalhoForm.entrada2.$error" ng-show="horarioTrabalhoForm.entrada2.$dirty" ng-class="{'has-error': (horarioTrabalhoForm.entrada2.$invalid && horarioTrabalhoForm.entrada2.$dirty)}">
+                                    <div ng-message="parse" class="help-block">
+                                        Por favor, informe um horario de entrada válido
+                                    </div>
+                                </div>
+                                <div ng-messages="horarioTrabalhoForm.saida2.$error" ng-show="horarioTrabalhoForm.saida2.$dirty" ng-class="{'has-error': (horarioTrabalhoForm.saida2.$invalid && horarioTrabalhoForm.saida2.$dirty)}">
+                                    <div ng-message="parse" class="help-block">
+                                        Por favor, informe um horario de saida válido
+                                    </div>
+                                </div>
+
+                            </form>
+                            <br/>
+                            <table class="table table-condensed" ng-show="profissional.horariosTrabalho.length > 0">
                                 <tr>
-                                    <th class="col-sm-3">Dia</th>
-                                    <th class="col-sm-1">Entrada</th>
-                                    <th class="col-sm-1">Saída</th>
-                                    <th class="col-sm-1">Entrada</th>
-                                    <th class="col-sm-1">Saída</th>
+                                    <th>Dia</th>
+                                    <th>Entrada</th>
+                                    <th>Saída</th>
+                                    <th>Entrada</th>
+                                    <th>Saída</th>
+                                    <th></th>
                                 </tr>
-                                <tr ng-repeat="horarioTrabalho in horarioTrabalho">
+                                <tr ng-repeat="horarioTrabalho in profissional.horariosTrabalho">
                                     <td>{{horarioTrabalho.diaDaSemana | diasSemanaToLabel}}</td>
-                                    <td>
-                                        <div class="col-sm-9 input-group input-group-sm">
-                                            <input type="text" class="form-control" time-input ng-model="horarioTrabalho.entrada1" >
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="col-sm-9 input-group input-group-sm">
-                                            <input type="text" class="form-control" time-input ng-model="horarioTrabalho.saida1">
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="col-sm-9 input-group input-group-sm">
-                                            <input type="text" class="form-control" time-input ng-model="horarioTrabalho.entrada2">
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="col-sm-9 input-group input-group-sm">
-                                            <input type="text" class="form-control" time-input ng-model="horarioTrabalho.saida2">
-                                        </div>
-                                    </td>
+                                    <td>{{horarioTrabalho.entrada1 | date:"HH:mm"}}</td>
+                                    <td>{{horarioTrabalho.saida1| date:"HH:mm"}}</td>
+                                    <td>{{horarioTrabalho.entrada2| date:"HH:mm"}}</td>
+                                    <td>{{horarioTrabalho.saida2| date:"HH:mm"}}</td>
+                                    <td><a ng-click="removeHorario(horarioTrabalho)" ><i class="fa fa-fw fa-trash"></i></a></td>
                                 </tr>
                             </table>
                         </div>
