--- a/src/main/webapp/view/salao.html
+++ b/src/main/webapp/view/salao.html
@@ -9,7 +9,7 @@
 <!-- Main content -->
 <section class="content">
     <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-2">
             <div class="box box-primary">
                 <div class="box-body box-profile">
                     <div class="row">
@@ -30,7 +30,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-9">
+        <div class="col-md-10">
             <div class="nav-tabs-custom">
                 <ul class="nav nav-tabs">
                     <li class="active"><a href="#dados" data-toggle="tab">Dados do Salão</a></li>
@@ -41,68 +41,68 @@
                     <div class="active tab-pane" id="dados">
                         <div class="row">
                             <div class="col-md-12">
-                                <form class="form-horizontal">
+                                <form class="form-horizontal" name="dadosForm">
                                     <div class="form-group">
-                                        <label for="input-nomeo" class="col-sm-2 control-label">Nome</label>
+                                        <label for="input-nome" class="col-sm-2 control-label">Nome</label>
                                         <div class="col-sm-9">
-                                            <input type="text" class="form-control" id="input-nome" placeholder="Nome do salão" >
+                                            <input type="text" class="form-control" id="input-nome" placeholder="Nome do salão" ng-model="dados.nome" >
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="input-dias-funcionamento" class="col-sm-2 control-label">Dias de funcionamento</label>
+                                        <label class="col-sm-2 control-label">Dias de funcionamento</label>
                                         <div class="col-sm-9">
                                             <label class="checkbox-inline">
-                                                <input type="checkbox" value="option1" checked> Dom
+                                                <input type="checkbox" value="option1" ng-model="dados.horarioDeFuncionamento.domingo"> Dom
                                             </label>
                                             <label class="checkbox-inline">
-                                                <input type="checkbox" value="option2"> Seg
+                                                <input type="checkbox" value="option2" ng-model="dados.horarioDeFuncionamento.segunda"> Seg
                                             </label>
                                             <label class="checkbox-inline">
-                                                <input type="checkbox" value="option3" checked> Ter
+                                                <input type="checkbox" value="option3" ng-model="dados.horarioDeFuncionamento.terca"> Ter
                                             </label>
                                             <label class="checkbox-inline">
-                                                <input type="checkbox" value="option3" checked> Qua
+                                                <input type="checkbox" value="option3" ng-model="dados.horarioDeFuncionamento.quarta"> Qua
                                             </label>
                                             <label class="checkbox-inline">
-                                                <input type="checkbox" value="option3" checked> Qui
+                                                <input type="checkbox" value="option3" ng-model="dados.horarioDeFuncionamento.quinta"> Qui
                                             </label>
                                             <label class="checkbox-inline">
-                                                <input type="checkbox" value="option3" checked> Sex
+                                                <input type="checkbox" value="option3" ng-model="dados.horarioDeFuncionamento.sexta"> Sex
                                             </label>
                                             <label class="checkbox-inline">
-                                                <input type="checkbox" value="option3" checked> Sáb
+                                                <input type="checkbox" value="option3" ng-model="dados.horarioDeFuncionamento.sabado"> Sáb
                                             </label>
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="input-horario-inicio" class="col-sm-2 control-label">Horário</label>
                                         <div class="col-sm-10">
-                                            <input style="width: 100px; text-align: center; display: inline-block;" type="text" placeholder="Início" class="form-control" id="input-horario-inicio" time-input ng-model="inicio" > Até
-                                            <input style="width: 100px; text-align: center; display: inline-block;" type="text" placeholder="Fim" class="form-control" id="input-horario-fim" time-input ng-model="fim" >
+                                            <input type="text" placeholder="Início" class="form-control inline" id="input-horario-inicio" time-input ng-model="dados.horarioDeFuncionamento.horarioInicio" > Até
+                                            <input type="text" placeholder="Fim" class="form-control inline" id="input-horario-fim" time-input ng-model="dados.horarioDeFuncionamento.horarioFinal" >
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="input-tel-fixo" class="col-sm-2 control-label" >Telefone fixo {{maskModel}}</label>
+                                        <label for="input-tel-fixo" class="col-sm-2 control-label" >Telefone fixo</label>
                                         <div class="col-sm-2">
-                                            <input type="text" class="form-control" id="input-tel-fixo" ng-model='maskModel' placeholder="Telefone fixo do salão" mask='(99) 9?9999-9999' mask-restrict='reject' mask-clean='true'>
+                                            <input type="text" class="form-control" id="input-tel-fixo" ng-model='dados.telefone' placeholder="Telefone fixo do salão" mask='(99) 9?9999-9999' mask-restrict='reject' mask-clean='true'>
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="input-tel-celulae" class="col-sm-2 control-label">Telefone celular {{maskModel2}}</label>
+                                        <label for="input-tel-celular" class="col-sm-2 control-label">Telefone celular </label>
                                         <div class="col-sm-2">
-                                            <input type="text" class="form-control" id="input-tel-celular" placeholder="Telefone celular do salão" ng-model='maskModel2' mask='(99) 9?9999-9999' mask-restrict='reject' mask-clean='true'>
+                                            <input type="text" class="form-control" id="input-tel-celular" placeholder="Telefone celular do salão" ng-model='dados.celular' mask='(99) 9?9999-9999' mask-restrict='reject' mask-clean='true'>
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="input-endereco" class="col-sm-2 control-label">Endereço</label>
                                         <div class="col-sm-9">
-                                            <input type="text" class="form-control" id="input-endereco" placeholder="Endereço">
+                                            <input type="text" class="form-control" id="input-endereco" placeholder="Endereço" ng-model="dados.endereco.rua">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="input-numero" class="col-sm-2 control-label">Número</label>
                                         <div class="col-sm-2">
-                                            <input type="text" class="form-control" id="input-numero" placeholder="Número">
+                                            <input type="number" class="form-control" id="input-numero" placeholder="Número" ng-model="dados.endereco.numero">
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -163,12 +163,12 @@
                                     <div class="form-group">
                                         <label for="input-endereco" class="col-sm-2 control-label">Visível no APP</label>
                                         <div class="col-sm-9">
-                                            <input type="checkbox" value="option1" checked>
+                                            <input type="checkbox" value="option1" ng-model='dados.visivelNoApp'>
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <div class="col-sm-offset-2 col-sm-9">
-                                            <button type="submit" class="btn btn-primary">Salvar</button>
+                                            <button type="submit" class="btn btn-primary" ng-click="atualizarDados(dados)" >Salvar</button>
                                         </div>
                                     </div>
                                 </form>
