--- a/src/main/webapp/view/profissional.html
+++ b/src/main/webapp/view/profissional.html
@@ -16,7 +16,7 @@
                         <a class="btn btn-primary" data-toggle="modal" ng-click="adicionar()"><i class="fa fa-fw fa-plus-circle"></i>Novo Profissional</a>
                     </div>
                     <br />
-                    <table id="profissional-table" class="table table-condensed table-hover">
+                    <table id="profissional-table" class="table table-condensed table-hover" ng-show="profissionais.length > 0">
                         <thead>
                             <tr>
                                 <th>Nome</th>
@@ -40,7 +40,9 @@
 
                         </tbody>
                     </table>
-                    <ul uib-pagination total-items="totalItems" ng-model="currentPage" items-per-page="itemsPerPage" max-size="maxSize" ng-change="pageChanged()"></ul>
+                    <div ng-show="profissionais.length > 0">
+                        <ul uib-pagination total-items="totalItems" ng-model="currentPage" items-per-page="itemsPerPage" max-size="maxSize" ng-change="pageChanged()"></ul>
+                    </div>
                 </div><!-- /.box-body -->
             </div><!-- /.box -->
         </div><!-- /.col -->
