--- a/src/main/webapp/view/salao.html
+++ b/src/main/webapp/view/salao.html
@@ -38,6 +38,7 @@
                     <li><a href="#acessos" data-toggle="tab">Acessos</a></li>
                 </ul>
                 <div class="tab-content">
+                    <!-- DADOS -->
                     <div class="active tab-pane" id="dados">
                         <div class="row">
                             <div class="col-md-12">
@@ -176,12 +177,13 @@
                         </div>
                     </div>
 
+                    <!-- SERVIÇOS -->
                     <div class="tab-pane" id="servicos" ng-controller="servicoController">
                         <div>
                             <a class="btn btn-primary" data-toggle="modal" ng-click="adicionar()"><i class="fa fa-fw fa-plus-circle"></i>Novo Serviço</a>
                         </div>
                         <br />
-                        <table class="table table-condensed">
+                        <table class="table table-condensed" ng-show="servicos.length > 0">
                             <tr>
                                 <th>Serviço</th>
                                 <th>Duração</th>
@@ -200,7 +202,7 @@
                                 </td>
                             </tr>
                         </table>
-                        <div>
+                        <div ng-show="servicos.length > 0">
                             <ul uib-pagination total-items="totalItems" ng-model="currentPage" items-per-page="itemsPerPage" max-size="maxSize" ng-change="pageChanged()"></ul>
                         </div>
 
@@ -302,6 +304,7 @@
 
                     </div>
 
+                    <!-- ACESSOS -->
                     <div class="tab-pane" id="acessos">
                         <div>
                             <a class="btn btn-primary" data-toggle="modal" data-target="#novo-usuario"><i class="fa fa-fw fa-plus-circle"></i>Novo Acesso</a>
@@ -309,17 +312,13 @@
                         <br />
                         <table class="table table-condensed">
                             <tr>
-                                <th>Nome</th>
-                                <th>E-mail de Acesso</th>
                                 <th>Perfil</th>
-                                <th>Data de Cadastro</th>
+                                <th>E-mail de Acesso</th>
                                 <th></th>
                             </tr>
-                            <tr>
-                                <td>Adiminitrador</td>
-                                <td>admin@gmail.com</td>
-                                <td>Administrador</td>
-                                <td><?=date('d/m/Y H:i:s')?></td>
+                            <tr ng-repeat="acesso in dados.acessos">
+                                <td>{{acesso.perfil | perfilToLabel}}</td>
+                                <td>{{acesso.email}}</td>
                                 <td>
                                     <a data-toggle="modal" data-target="#editar-usuario"><i class="fa fa-fw fa-edit"></i></a>
                                     <a data-toggle="modal" data-target="#excluir-usuario"><i class="fa fa-fw fa-trash"></i></a>
