Registro do salao e varios bugs

--- a/src/main/webapp/view/profissional.html
+++ b/src/main/webapp/view/profissional.html
@@ -118,7 +118,7 @@
                                                         O campo apelido deve ter no mínimo 5 caracteres
                                                     </div>
                                                     <div ng-message="maxlength" class="help-block">
-                                                        O campo apelido de ter no máximo 255 caracteres
+                                                        O campo apelido deve ter no máximo 255 caracteres
                                                     </div>
                                                 </div>
                                             </div>
