--- a/src/main/webapp/view/registro.html
+++ b/src/main/webapp/view/registro.html
@@ -1,38 +1,91 @@
 <div class="register-box">
     <div class="register-box-body">
         <p class="login-box-msg">Registre-se</p>
-        <form action="#" method="get">
-            <div class="form-group has-feedback">
-                <input type="email" class="form-control" placeholder="E-mail">
-                <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
-            </div>
-            <div class="form-group has-feedback">
-                <input type="text" class="form-control" placeholder="Nome do salão">
+        <form name="registroForm">
+            <!-- NOME DO SALÃO -->
+            <div class="form-group has-feedback"  ng-class="{'has-error': (registroForm.nomeSalao.$invalid && registroForm.nomeSalao.$dirty)}">
+                <input type="text" class="form-control" placeholder="Nome do salão" name="nomeSalao" ng-model="registro.nomeSalao" ng-required="true" ng-minlength="5" ng-maxlength="255">
                 <span class="glyphicon glyphicon-asterisk form-control-feedback"></span>
+                <div ng-messages="registroForm.nomeSalao.$error" ng-show="registroForm.nomeSalao.$dirty">
+                    <div ng-message="required" class="help-block">
+                        Por favor, preencher o campo nome do salão
+                    </div>
+                    <div ng-message="minlength" class="help-block">
+                        O campo nome do salão deve ter no mínimo 5 caracteres
+                    </div>
+                    <div ng-message="maxlength" class="help-block">
+                        O campo nome do salão deve ter no máximo 255 caracteres
+                    </div>
+                </div>
             </div>
-            <div class="form-group has-feedback">
-                <input type="text" class="form-control" placeholder="Responsável pelo salão">
-                <span class="glyphicon glyphicon-user form-control-feedback"></span>
-            </div>
-            <div class="form-group has-feedback">
-                <input type="tel" class="form-control" placeholder="Telefone">
+
+            <!-- TELEFONE DO SALÃO -->
+            <div class="form-group has-feedback" ng-class="{'has-error': (registroForm.telefoneSalao.$invalid && registroForm.telefoneSalao.$dirty)}">
+                <input type="text" class="form-control" placeholder="Telefone" name="telefoneSalao" ng-model="registro.telefoneSalao"  mask='(99) 9?9999-9999' mask-restrict='reject' mask-clean='true' ng-required="true">
                 <span class="glyphicon glyphicon-phone-alt form-control-feedback"></span>
+                <div ng-messages="registroForm.telefoneSalao.$error" ng-show="registroForm.telefoneSalao.$dirty">
+                    <div ng-message="required" class="help-block">
+                        Por favor, preencher o campo telefone
+                    </div>
+                    <div ng-message="mask" class="help-block">
+                        Por favor, informar um telefone completo
+                    </div>
+                </div>
             </div>
-            <div class="form-group has-feedback">
-                <input type="password" class="form-control" placeholder="Senha">
+
+            <!-- RESPONSÁVEL PELO SALÃO -->
+            <div class="form-group has-feedback" ng-class="{'has-error': (registroForm.nomeAdministradorSalao.$invalid && registroForm.nomeAdministradorSalao.$dirty)}">
+                <input type="text" class="form-control" placeholder="Responsável pelo salão" name="nomeAdministradorSalao" ng-model="registro.nomeAdministradorSalao" ng-required="true" ng-minlength="5" ng-maxlength="255">
+                <span class="glyphicon glyphicon-user form-control-feedback"></span>
+                <div ng-messages="registroForm.nomeAdministradorSalao.$error" ng-show="registroForm.nomeAdministradorSalao.$dirty">
+                    <div ng-message="required" class="help-block">
+                        Por favor, preencher o campo responsável pelo salão
+                    </div>
+                    <div ng-message="minlength" class="help-block">
+                        O campo responsável pelo salão deve ter no mínimo 5 caracteres
+                    </div>
+                    <div ng-message="maxlength" class="help-block">
+                        O campo responsável pelo salão deve ter no máximo 255 caracteres
+                    </div>
+                </div>
+            </div>
+
+            <!-- EMAIL RESPONSÁVEL PELO SALÃO -->
+            <div class="form-group has-feedback" ng-class="{'has-error': (registroForm.emailAdministradorSalao.$invalid && registroForm.emailAdministradorSalao.$dirty)}">
+                <input type="email" class="form-control" placeholder="E-mail" name="emailAdministradorSalao" ng-model="registro.emailAdministradorSalao" ng-required="true">
+                <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+                <div ng-messages="registroForm.emailAdministradorSalao.$error" ng-show="registroForm.emailAdministradorSalao.$dirty">
+                    <div ng-message="required" class="help-block">
+                        Por favor, preencher o campo e-mail
+                    </div>
+                    <div ng-message="email" class="help-block">
+                        Por favor, informe um e-mail válido
+                    </div>
+                </div>
+            </div>
+
+            <!-- SENHA RESPONSÁVEL PELO SALÃO -->
+            <div class="form-group has-feedback" ng-class="{'has-error': (registroForm.senhaAdministradorSalao.$invalid && registroForm.senhaAdministradorSalao.$dirty)}">
+                <input type="password" class="form-control" placeholder="Senha" name="senhaAdministradorSalao" ng-model="registro.senhaAdministradorSalao" ng-required="true" ng-minlength="5" ng-maxlength="10">
                 <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-            </div>
-            <div class="form-group has-feedback">
-                <input type="password" class="form-control" placeholder="Confirma senha">
-                <span class="glyphicon glyphicon-log-in form-control-feedback"></span>
+                <div ng-messages="registroForm.senhaAdministradorSalao.$error" ng-show="registroForm.senhaAdministradorSalao.$dirty">
+                    <div ng-message="required" class="help-block">
+                        Por favor, preencher o campo senha
+                    </div>
+                    <div ng-message="minlength" class="help-block">
+                        O campo senha deve ter no mínimo 5 caracteres
+                    </div>
+                    <div ng-message="maxlength" class="help-block">
+                        O campo senha deve ter no máximo 10 caracteres
+                    </div>
+                </div>
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <button type="submit" class="btn btn-primary btn-block btn-flat">Registrar</button>
+                    <button type="submit" class="btn btn-primary btn-block btn-flat" ng-click="registrar(registro)" ng-disabled="registroForm.$invalid">Registrar</button>
                 </div><!-- /.col -->
             </div>
         </form>
-
         <a ui-sref="login" class="text-center">Eu já tenho um registro</a>
     </div><!-- /.form-box -->
 </div><!-- /.register-box -->
