--- a/src/main/webapp/view/salao.html
+++ b/src/main/webapp/view/salao.html
@@ -305,9 +305,9 @@
                     </div>
 
                     <!-- ACESSOS -->
-                    <div class="tab-pane" id="acessos">
+                    <div class="tab-pane" id="acessos" ng-controller="acessoController">
                         <div>
-                            <a class="btn btn-primary" data-toggle="modal" data-target="#novo-usuario"><i class="fa fa-fw fa-plus-circle"></i>Novo Acesso</a>
+                            <a class="btn btn-primary" data-toggle="modal" ng-click="novoAcesso()"><i class="fa fa-fw fa-plus-circle"></i>Novo Acesso</a>
                         </div>
                         <br />
                         <table class="table table-condensed">
@@ -316,7 +316,7 @@
                                 <th>E-mail de Acesso</th>
                                 <th></th>
                             </tr>
-                            <tr ng-repeat="acesso in dados.acessos">
+                            <tr ng-repeat="acesso in acessos">
                                 <td>{{acesso.perfil | perfilToLabel}}</td>
                                 <td>{{acesso.email}}</td>
                                 <td>
@@ -325,24 +325,25 @@
                                 </td>
                             </tr>
                         </table>
-                        <div class="fade modal" id="novo-usuario">
+                        <div class="fade modal" id="novo-acesso">
                             <div class="modal-dialog">
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                                        <h4 class="modal-title" id="myModalLabel">Novo Acesso</h4>
+                                        <h4 class="modal-title" id="novo-acesso-title">Novo Acesso</h4>
                                     </div>
                                     <div class="modal-body">
-                                        <form class="form-horizontal" role="form">
+                                        {{acesso}}
+                                        <form class="form-horizontal" name="acessoForm">
                                             <div class="form-group">
                                                 <div class="col-sm-3">
                                                     <label class="control-label">Perfil</label>
                                                 </div>
                                                 <div class="col-sm-8">
-                                                    <select class="form-control">
-                                                        <option>Administrador</option>
-                                                        <option>Profissional - Administrador</option>
-                                                        <option>Profissional - Visualização</option>
+                                                    <select class="form-control" ng-model="acesso.perfil">
+                                                        <option value="">Selecione um Perfil</option>
+                                                        <option value="SALAO_ADMIN">Administrador</option>
+                                                        <option value="SALAO_PROFISSIONAL">Profissional</option>
                                                     </select>
                                                 </div>
                                             </div>
@@ -351,10 +352,8 @@
                                                     <label class="control-label">Profissional</label>
                                                 </div>
                                                 <div class="col-sm-8">
-                                                    <select class="form-control">
-                                                        <option>Profissional 1</option>
-                                                        <option>Profissional 2</option>
-                                                        <option>Profissional 3</option>
+                                                    <select class="form-control"  ng-model="funcionario.selecionado" ng-options="funcionario.id as funcionario.nome for funcionario in funcionarios">
+                                                        <option value="">Selecione um Profissional</option>
                                                     </select>
                                                 </div>
                                             </div>
@@ -363,7 +362,7 @@
                                                     <label class="control-label">E-mail</label>
                                                 </div>
                                                 <div class="col-sm-8">
-                                                    <input type="email" class="form-control" placeholder="E-mail de acesso ao sistema">
+                                                    <input type="email" class="form-control" placeholder="E-mail de acesso ao sistema" ng-model="acesso.email">
                                                 </div>
                                             </div>
                                             <div class="form-group">
@@ -371,14 +370,14 @@
                                                     <label class="control-label">Senha</label>
                                                 </div>
                                                 <div class="col-sm-8">
-                                                    <input type="password" class="form-control" placeholder="Senha do usuario">
+                                                    <input type="password" class="form-control" placeholder="Senha do usuario" ng-model="acesso.senha">
                                                 </div>
                                             </div>
                                         </form>
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-                                        <button type="button" class="btn btn-primary">Salvar</button>
+                                        <button type="button" class="btn btn-primary" ng-click="adicionar(funcionario.selecionado, acesso)">Salvar</button>
                                     </div>
                                 </div>
                             </div>
